# fault_tolerant_control_ros2

./: README.md
src/ftc_bringup/: CMakeLists.txt  package.xml
src/ftc_bringup/config/: controller.yaml
src/ftc_bringup/launch/: simulation.launch.py
src/ftc_bringup/worlds/: empty.world
src/ftc_ctrl/: CMakeLists.txt  package.xml
src/ftc_ctrl/include/ftc_ctrl/: ftc_ctrl.h
src/ftc_ctrl/scripts/: fail_motor.sh  goto.sh  set_yaw.sh  takeoff.sh
src/ftc_ctrl/src/: ftc_ctrl.cpp  ftc_ctrl_node.cpp  state_interface_node.cpp
src/ftc_description/: CMakeLists.txt  package.xml
src/ftc_description/meshes/: README.txt
src/ftc_description/urdf/: hummingbird.urdf.xacro
src/ftc_gazebo_plugin/: CMakeLists.txt  package.xml
src/ftc_gazebo_plugin/include/ftc_gazebo_plugin/: ftc_motor_model.hpp
src/ftc_gazebo_plugin/src/: ftc_motor_model.cpp
src/quad_msgs/: CMakeLists.txt  package.xml
src/quad_msgs/msg/: Actuators.msg  ControlCommand.msg  QuadStateEstimate.msg
