<?xml version="1.0"?>
<package format="3">
  <name>ftc_bringup</name>
  <version>1.0.0</version>
  <description>Launch files and configuration for the fault-tolerant control simulation</description>
  <maintainer email="you@email.com">student</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ftc_ctrl</exec_depend>
  <exec_depend>ftc_description</exec_depend>
  <exec_depend>ftc_gazebo_plugin</exec_depend>
  <exec_depend>quad_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
