<?xml version="1.0"?>
<package format="3">
  <name>ftc_ctrl</name>
  <version>2.0.0</version>
  <description>Fault-tolerant NDI flight controller (ROS 2 native port)</description>
  <maintainer email="you@email.com">student</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>quad_msgs</depend>
  <depend>eigen</depend>
  <depend>eigen3_cmake_module</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
