<?xml version="1.0"?>
<package format="3">
  <name>ftc_description</name>
  <version>1.0.0</version>
  <description>URDF description of the quadrotor used for fault-tolerant control</description>
  <maintainer email="you@email.com">student</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
