<?xml version="1.0"?>
<package format="3">
  <name>ftc_gazebo_plugin</name>
  <version>1.0.0</version>
  <description>Gazebo Classic plugin simulating quadrotor motor dynamics
               (ROS 2 native replacement for the RotorS simulator)</description>
  <maintainer email="you@email.com">student</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>quad_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
